--- a/Develop/package.json
+++ b/Develop/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
+    "mysql": "mysql -u root -p"
   },
   "repository": {
     "type": "git",
